--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    Store Page
+
+{% extends 'base.html' %}
+{% block body %}
+<div>
+    <ul class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="{{ url_for('register.html') }}">Student sign up</a></li>
+    </ul>
+</div>
+{% endblock %}
 </body>
-</html>
