Register, Index, and Base html pages added. Need to change 'base.html' to work. Changed some reg req and it should work now fine.

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,11 +1,8 @@
-
 {% extends 'base.html' %}
 {% block body %}
-<div>
     <ul class="menu">
         <li><a href="/">Home</a></li>
-        <li><a href="{{ url_for('register.html') }}">Student sign up</a></li>
+        <li><a href="/register">Click Here to Register!</a></li>
     </ul>
-</div>
 {% endblock %}
-</body>
+
