Fixed a couple of small issues, might be more, needs further testing.

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -110,7 +110,7 @@
 
 
     <footer>
-        <p>&copy; 2023 Riley is great. All rights reserved.</p>
+        <p>&copy; 2023 Maris Resell Co. All rights reserved.</p>
     </footer>
 </body>
 </html>
