--- a/Templates/cart.html
+++ b/Templates/cart.html
@@ -108,7 +108,7 @@ tr[data-recipient-id="{{ session.id }}"] td:nth-child(4) {
             <!-- Add customer-specific content here -->
         {% endif %}
     {% else %}
-        <h2>Welcome to the Riley Is Great Shopping Network &lt;3</h2>
+        <h2>Welcome Maris Resell Co. &lt;3</h2>
     {% endif %}
 
     <nav>
@@ -176,7 +176,7 @@ tr[data-recipient-id="{{ session.id }}"] td:nth-child(4) {
     </section>
 
     <footer>
-		<p>&copy; Official Riley Is Great Ecommerce Network<a href="#"><3</a></p>
+		<p>&copy; Official Maris Resell Co.<a href="#"><3</a></p>
     </footer>
 </body>
 </html>
