--- a/Templates/index.html
+++ b/Templates/index.html
@@ -21,7 +21,7 @@
         </form>
     </main>
     <footer>
-        		<p>&copy; Maris Resell Co.<a href="#"><3</a></p>
+        		<p>&copy; Maris Resell Co.<a href="#"></a></p>
     </footer>
 </body>
 {% endblock %}
