--- a/Templates/register.html
+++ b/Templates/register.html
@@ -6,7 +6,7 @@
     </header>
     <main>
        <div class="overlay">
-      <form id="register_form" class="form_class" action="/add_account" method="post">
+      <form id="register_form" class="form_class" action="/register_account" method="post">
       <div class="form_div">
       <label for="username">Username:</label>
       <input class="field_class" id="username" type="text" name="username" placeholder="Username" autofocus>
