--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -69,7 +69,7 @@
             <!-- Add customer-specific content here -->
         {% endif %}
     {% else %}
-        <h2>Welcome to the Riley Is Great Shopping Network &lt;3</h2>
+        <h2>Welcome Maris Resell Co. &lt;3</h2>
     {% endif %}
 
     <nav>
@@ -196,12 +196,12 @@
 
 
 	<footer>
-		<p>&copy; 2023 Riley is great. All rights reserved.</p>
+		<p>&copy; 2023 Maris Resell Co. All rights reserved.</p>
 	</footer>
 </body>
 
     <footer>
-		<p>&copy; Official Riley Is Great Ecommerce Network<a href="#"><3</a></p>
+		<p>&copy; Official Maris Resell Co.<a href="#"><3</a></p>
     </footer>
 </body>
 </html>
