--- a/Templates/vendor.html
+++ b/Templates/vendor.html
@@ -175,7 +175,7 @@
 
 
 	<footer>
-		<p>&copy; 2023 Riley is great. All rights reserved.</p>
+		<p>&copy; 2023 Maris Resell Co. All rights reserved.</p>
 	</footer>
 </body>
 </html>
