Fixed other errors, unsure why the cart refuses to be seen.

--- a/Templates/cart.html
+++ b/Templates/cart.html
@@ -176,7 +176,7 @@ tr[data-recipient-id="{{ session.id }}"] td:nth-child(4) {
     </section>
 
     <footer>
-		<p>&copy; Official Maris Resell Co.<a href="#"><3</a></p>
+		<p>&copy; Official Maris Resell Co.<a href="#"></a></p>
     </footer>
 </body>
 </html>
