--- a/Templates/register.html
+++ b/Templates/register.html
@@ -14,11 +14,9 @@
       <input id="password" class="field_class" name="password" type="password" placeholder="Password">
       <label for="email">Email:</label>
       <input id="email" class="field_class" name="email" type="email" placeholder="Email">
-      <label for="first-name">First Name:</label>
-      <input id="first-name" class="field_class" name="first_name" type="text" placeholder="First Name">
-      <label for="last-name">Last Name:</label>
-      <input id="last-name" class="field_class" name="last_name" type="text" placeholder="Last Name">
-      <input type="hidden" id="type" name="type" value="customer">
+      <label for="full-name">Full Name:</label>
+      <input id="full-name" class="field_class" name="full_name" type="text" placeholder="Full Name">
+      <input type="hidden" id="acc_type" name="acc_type" value="customer">
       <button class="submit_class" type="submit" form="register_form">Create</button>
     </div>
     <div class="info_div">
