--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -56,17 +56,17 @@
     <header>
     {% if session.logged_in %}
         {% if session.type == 'Vendor' %}
-            <!-- Vendor-specific items -->
+
             <h2>Welcome Vendor {{ session.username }}</h2>
-            <!-- Add vendor-specific content here -->
+
         {% elif session.type == 'Admin' %}
-            <!-- Admin-specific items -->
+
             <h2>Welcome Admin {{ session.username }}</h2>
-            <!-- Add admin-specific content here -->
+
         {% else %}
-            <!-- Customer-specific items -->
+
             <h2>Welcome Customer {{ session.username }}</h2>
-            <!-- Add customer-specific content here -->
+
         {% endif %}
     {% else %}
         <h2>Welcome Maris Resell Co. &lt;3</h2>
@@ -142,14 +142,14 @@
 
 
 
-<!--view messages-->
+
 	<div id="view-pending-requests-popup" class="popup">
 		<div class="popup-content">
 						<button onclick="closePopup('view-pending-requests-popup')">Close</button>
 		</div>
 	</div>
 
-<!--    view products-->
+
 <div id="view-products-popup" class="popup">
     <div class="popup-content">
         <h2>View Products</h2>
@@ -201,7 +201,7 @@
 </body>
 
     <footer>
-		<p>&copy; Official Maris Resell Co.<a href="#"><3</a></p>
+		<p>&copy; Official Maris Resell Co.<a href="#"></a></p>
     </footer>
 </body>
 </html>
