--- a/Templates/chats.html
+++ b/Templates/chats.html
@@ -69,7 +69,7 @@
             <!-- Add customer-specific content here -->
         {% endif %}
     {% else %}
-        <h2>Welcome to the Riley Is Great Shopping Network &lt;3</h2>
+        <h2>Welcome to Official Maris Resell Co. &lt;3</h2>
     {% endif %}
 
     <nav>
@@ -149,7 +149,7 @@
 {% endblock %}
 
     <footer>
-		<p>&copy; Official Riley Is Great Ecommerce Network<a href="#"><3</a></p>
+		<p> Official Maris Resell Co.<a href="#"></a></p>
     </footer>
 </body>
 </html>
