--- a/Templates/customer.html
+++ b/Templates/customer.html
@@ -57,20 +57,20 @@
     <header>
     {% if session.logged_in %}
         {% if session.type == 'Vendor' %}
-            <!-- Vendor-specific items -->
+
             <h2>Welcome Vendor {{ session.username }}</h2>
-            <!-- Add vendor-specific content here -->
+
         {% elif session.type == 'Admin' %}
-            <!-- Admin-specific items -->
+
             <h2>Welcome Admin {{ session.username }}</h2>
-            <!-- Add admin-specific content here -->
+
         {% else %}
-            <!-- Customer-specific items -->
-            <h2>Welcome Customer <a href="/accinfo">{{ session.username }}</a></h2>
-            <!-- Add customer-specific content here -->
+
+            <h2>Welcome Customer <a href="/acc_info">{{ session.username }}</a></h2>
+
         {% endif %}
     {% else %}
-        <h2>Welcome to the Riley Is Great Shopping Network &lt;3</h2>
+        <h2>Welcome to Official Maris Resell Co. </h2>
     {% endif %}
 
     <nav>
@@ -274,12 +274,12 @@
 
 
 	<footer class="footer">
-		<p>&copy; 2023 Riley is great. All rights reserved.</p>
+		<p>&copy; 2023 Official Maris Resell Co.</p>
 	</footer>
 </body>
 
     <footer>
-        <p>&copy; 2023 Riley is great. All rights reserved.</p>
+        <p>&copy; 2023 Official Maris Resell Co.</p>
     </footer>
 </body>
 </html>
