--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -67,7 +67,7 @@ main {
 .submit_class {
     border-style: none;
     border-radius: 5px;
-    background-color: #FFE6D4;
+    background-color: #0099ff;
     padding: 8px 20px;
     font-family: 'system-ui';
     text-transform: uppercase;
